--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -24,6 +24,7 @@
   border-radius: 50%;
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
   transition: opacity 0.3s;
+  background-color: #0e3f6d;
 }
 
 .landing--container-left {
@@ -91,12 +92,13 @@
 }
 
 .lcr-buttonContainer {
-  margin-top: 2rem;
+  margin-top: 3rem;
   width: 350px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-family: "var(--primaryFont)", sans-serif;
+  margin-left: 50px;
 }
 
 @media (max-width: 1100px) {
@@ -151,6 +153,7 @@
     width: 200px;
     height: 120px;
     align-items: flex-start;
+    margin-right: 50px;
   }
   .lcr-buttonContainer button:nth-child(2) {
     display: none;
