--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     height: 6.5rem;
-    position: absolute;
+    position: fixed;
     background-color: transparent;
     left: 0;
     top: 0;
@@ -9,6 +9,20 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    transition: top 0.3s;
+}
+
+.navbar.hidden {
+    top: -6.5rem; /* Hide the navbar by moving it above the viewport */
+}
+
+.top-hover-area {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px; /* Adjust height as needed */
+    z-index: 100;
 }
 
 .navbar--container {
@@ -59,7 +73,11 @@
 @media (max-width:800px) {
     .navLink--container {
         margin-top: 3rem;
+        flex-direction: column;
+        margin-left: 0px;
     }
+
+
 }
 
 
