--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -33,8 +33,14 @@
 .skill--scroll {
     width: 100%;
     margin: 0 2rem;
+    overflow-x: auto; /* Enable horizontal scrolling */
+    white-space: nowrap; /* Prevent line breaks */
+    cursor: grab; /* Change cursor to indicate draggable area */
 }
 
+.skill--scroll:active {
+    cursor: grabbing; /* Change cursor while dragging */
+}
 
 .skill--box {
     background: #FAFAFA;
@@ -43,7 +49,7 @@
     width: 160px;
     height: 160px;
     margin: 1.5rem;
-    display: flex;
+    display: flex; 
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -51,16 +57,14 @@
     transition: 300ms ease-in-out;
 }
 
-.skill--box:hover  {
+.skill--box:hover {
     transform: scale(1.15);
 }
-
 
 .skill--box > img {
     height: 50px;
     pointer-events: none;
 }
-
 
 .skill--box h3 {
     font-family: Big Shoulders Text;
@@ -71,11 +75,9 @@
     margin-top: 1rem;
 }
 
-
 .marquee {
     padding: 3rem 0;
 }
-
 
 @media (min-width: 992px) and (max-width: 1380px) {
     .skills {
@@ -86,7 +88,6 @@
         margin-top: 1.5rem;
     }
 }
-
 
 @media screen and (max-width: 992px) {
     .skills {
@@ -111,12 +112,10 @@
         height: 45px;
     }
 
-
     .skill--box h3 {
         font-size: 20px;
         margin-top: 1rem;
     }
-
 }
 
 @media screen and (max-width: 800px) {
@@ -156,18 +155,4 @@
         font-size: 18px;
         margin-top: 1rem;
     }
-}
-
-@media screen and (max-width: 400px) {
-
-}
-  
-@media only screen and (min-device-width: 320px) and (max-device-width: 
-  480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
-
-}
-
-
-@media only screen and (device-width: 768px) {
-
 }
