--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -18,7 +18,7 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-    margin-right: 2rem;
+    /* margin-right: 2rem; */
 }
 
 .experience-description > h1 {
@@ -30,15 +30,24 @@
 .experience-card {
     display: flex;
     flex-direction: row;
-    align-items:flex-start;
+    align-items: flex-start;
     justify-content: flex-start;
     width: 90%;
-    height: 140px;
+    height: auto;  /* Change height to auto to allow dynamic sizing */
     padding: 1.5rem;
     border-radius: 20px;
     margin-bottom: 1.5rem;
-    transition: background-color 200ms ease-in-out;
+    transition: background-color 200ms ease-in-out, max-height 200ms ease-in-out;
+    max-height: 140px;  /* Set initial max-height */
+    overflow: hidden;  /* Hide overflowing content */
 }
+
+.experience-card:hover {
+    max-height: 800px;  /* Set a large enough max-height to accommodate content */
+    transition: max-height 300ms ease-in-out;
+}
+
+
 
 .expcard-img {
     border-radius: 50%;
