--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -66,6 +66,20 @@
 .about-img > img {
     width: 380px;
     flex: 0.5;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+}
+.carousel-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px; /* Set the desired height */
+}
+
+.carousel-image {
+  width: auto;
+  height: 100%;
+  object-fit: cover; /* Ensures the image covers the container while maintaining aspect ratio */
 }
 
 @media (min-width: 992px) and (max-width: 1380px) {
